2002-10-10 M Pollard <circlemaster@blueyonder.co.uk>
	* autogen.sh, NEWS: Made automake do automake --gnu and added needed
	  files.
	
	* configure.ac: added AM_MAINTAINER_MODE.

	* dime.spec.in: tweaked a bit to add docs and build right.

2002-10-09 M Pollard <circlemaster@blueyonder.co.uk>
	* All of the Makefile.am's: Fixed these to allow make dist.

	* src/services/font/Font.h: Changed font strings to basic_string
	<wchar_t> rather than wstring due to gcc 2.95 issues.

2002-10-10 Al Riddoch <alriddoch@zepler.org>
	* src/services/font/Font.h: std:: namespace fix.

2002-10-09 Al Riddoch <alriddoch@zepler.org>
	* src/services/server/OOGChat.cpp: Fix connecting of disappearance
	  method to Disappearance signal. Get rid of trailing "0" on
	  some console messages.

	* src/main/Dime.cpp: std:: namespace fix.

2002-10-09 Al Riddoch <alriddoch@zepler.org>
	* src/services/font/Font.h: Use standard std::wstring for font strings.

2002-10-07 Al Riddoch <alriddoch@zepler.org>
	* src/services/server/OOGChat.cpp: std:: namespace fixes.

	* src/services/input/InputDevice.h, src/services/datamodel/DataModel.h:
	  Fix legaxy sigc++ includes.

	* src/services/gui/EventGenerator.h: ISO C++ require
	  "friend class foo" rather than just "friend foo".

BIG GAP HERE DUE TO DEVELOPER LAZINESS sorry!

2002-07-20 16:47  nikal

	* text/public/: dimestyle.css, index.txt:  removing the
	dimestylesheet and reference

2002-07-20 14:42  nikal

	* text/public/: dimestyle.css, index.txt: Adding a stylesheet and
	it's reference

2002-07-20 13:27  nikal

	* text/public/: battleplan.txt, concept_doc.txt, features.txt,
	index.txt, news.txt, developer_doc/architecture.txt,
	developer_doc/components.txt, developer_doc/data_model.txt,
	developer_doc/data_model_fw.txt, developer_doc/design.txt,
	developer_doc/development_methodology.txt, developer_doc/index.txt,
	developer_doc/scripting.txt, developer_doc/services.txt,
	working_notes/index.txt, working_notes/theme_format.txt,