@@ -38,7 +38,7 @@ LDFLAGS="$LDFLAGS $SDL_LIBS"
 
 dnl Check for SigC++
 SIGC_VERSION=1.0.4
-PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= 1.1.11,
+PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= 1.2.1,
      [
          CXXFLAGS="$CXXFLAGS $SIGC_CFLAGS"
          LDFLAGS="$LDFLAGS $SIGC_LIBS"
