@@ -2,4 +2,5 @@ noinst_LIBRARIES = libTestServices.a
 
 INCLUDES = -I$(top_srcdir)/src
 
-libTestServices_a_SOURCES = DataModelTest.cpp TestServices.cpp InputServiceTest.cpp StateManagerTest.cpp DataModelTest.h InputServiceTest.h StateManagerTest.h TestServices.h
+libTestServices_a_SOURCES = DataModelTest.cpp TestServices.cpp InputServiceTest.cpp DataModelTest.h InputServiceTest.h StateManagerTest.h TestServices.h
+#StateManagerTest.cpp
