@@ -4,11 +4,11 @@
 
 #include "DataModelTest.h"
 #include "InputServiceTest.h"
-#include "StateManagerTest.h"
+//#include "StateManagerTest.h"
 
 CPPUNIT_TEST_SUITE_REGISTRATION( dime::DataModelTestCase );
 CPPUNIT_TEST_SUITE_REGISTRATION( dime::InputServiceTestCase );
-CPPUNIT_TEST_SUITE_REGISTRATION( dime::StateManagerTestCase );
+//CPPUNIT_TEST_SUITE_REGISTRATION( dime::StateManagerTestCase );
 
 
 bool runTests() 
